--- a/user-admin/my_referrals.html
+++ b/user-admin/my_referrals.html
@@ -48,20 +48,18 @@
           </a>
         </li>
         <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Components">
-          <a class="nav-link" href="tables.html">
+          <a class="nav-link" href="work.html">
             <i class="fa fa-fw fa-table"></i>
             <span class="nav-link-text">Work</span>
           </a>
         </li>
         <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Refer & Earn">
-          <a class="nav-link" href="refer_earn.html">
-            <i class="fa fa-fw fa-table"></i>
+          <a class="nav-link" href="tables.html">
             <span class="nav-link-text">Refer & Earn</span>
           </a>
         </li>
-        <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Components">
+        <li class="nav-item active" data-toggle="tooltip" data-placement="right" title="Components">
           <a class="nav-link" href="tables.html">
-            <i class="fa fa-fw fa-table"></i>
             <span class="nav-link-text">My Referrals</span>
           </a>
         </li>
@@ -164,70 +162,49 @@
     <div class="container-fluid">
       <!-- Breadcrumbs-->
       <div class="col-sm-12">
-        <h3>Dashboard</h3>
-        <p>Main wallet balance: $50</p>
-        <p>Referral wallet balance: $5</p>
-        <p>Transfer wallet balance: $20</p>
-      </div>
-      
-      <!-- Example DataTables Card-->
-      <div class="card mb-3">
-        <div class="card-header">
-          <i class="fa fa-table"></i> Recent Activity</div>
-        <div class="card-body">
-          <div class="row">
-            <div class="col-md-4">
-              Activity Logs
+        <h3>Refer & Earn</h3>
+        <div class="card mb-3">
+          <div class="card-body">
+            <div class="row">
+              <div class="col-md-4">
+                Users List
+              </div>
+              <div class="col-md-3">
+                <input id="datepickerFrom" />
+              </div>
+              <div class="col-md-3">
+                <input id="datepickerTo" />
+              </div>
             </div>
-            <div class="col-md-3">
-              <input id="datepickerFrom" />
+            <div class="table-responsive">
+              <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
+                <thead>
+                  <tr>
+                    <th>#</th>
+                    <th>Username</th>
+                    <th>Email</th>
+                    <th>Joined On</th>
+                    <th>Status</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>1</td>
+                    <td>abc123</td>
+                    <td>abc@ck.com</td>
+                    <td>13/01/18</td>
+                    <td>Inactive</td>
+                  </tr>
+                  <tr>
+                    <td>2</td>
+                    <td>xyz323</td>
+                    <td>xyz@tk.com</td>
+                    <td>07/01/18</td>
+                    <td>Active</td>
+                  </tr>
+                </tbody>
+              </table>
             </div>
-            <div class="col-md-3">
-              <input id="datepickerTo" />
-            </div>
-          </div>
-          <div class="table-responsive">
-            <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
-              <thead>
-                <tr>
-                  <th>#</th>
-                  <th>Activity name</th>
-                  <th>Amount</th>
-                  <th>Date</th>
-                  <th>Status</th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr>
-                  <td>1</td>
-                  <td>Deposit</td>
-                  <td>$30</td>
-                  <td>13/01/18</td>
-                  <td>Completed</td>
-                </tr>
-                <tr>
-                  <td>2</td>
-                  <td>Received</td>
-                  <td>$80</td>
-                  <td>14/01/18</td>
-                  <td>Completed</td>
-                </tr>
-                <tr>
-                  <td>3</td>
-                  <td>Transfer</td>
-                  <td>$500</td>
-                  <td>15/01/18</td>
-                  <td>Failed</td>
-                </tr>
-                <tr>
-                  <td>4</td>
-                  <td>Withdraw</td>
-                  <td>$100</td>
-                  <td>16/01/18</td>
-                  <td>Processing</td>
-                </tr>
-              </tbody>
-            </table>
           </div>
         </div>
       </div>
@@ -263,12 +240,9 @@
     <script src="../vendor/jquery-easing/jquery.easing.min.js"></script>
     <!-- Page level plugin JavaScript-->
     <script src="../vendor/chart.js/Chart.min.js"></script>
-    <script src="../vendor/datatables/jquery.dataTables.js"></script>
-    <script src="../vendor/datatables/dataTables.bootstrap4.js"></script>
     <!-- Custom scripts for all pages-->
     <script src="../js/sb-admin.min.js"></script>
     <!-- Custom scripts for this page-->
-    <script src="../js/sb-admin-datatables.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/gijgo@1.9.6/js/gijgo.min.js" type="text/javascript"></script>
     <script>
         $('#datepickerFrom').datepicker({
